[gd_scene load_steps=9 format=3 uid="uid://c43lach4rl63y"]

[ext_resource type="Script" path="res://addons/affix.idb/EditorControl.gd" id="1_th4b5"]
[ext_resource type="Script" path="res://addons/affix.idb/combobox.gd" id="2_tllp7"]
[ext_resource type="Script" path="res://addons/affix.idb/bind_items_to_tables_control.gd" id="3_vpp0t"]
[ext_resource type="Script" path="res://addons/affix.idb/monster_builder_controls.gd" id="4_xvjam"]
[ext_resource type="Script" path="res://addons/affix.idb/item_builder_controls.gd" id="5_x68gr"]
[ext_resource type="Script" path="res://addons/affix.idb/table_builder_controls.gd" id="6_3hbna"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pmsgt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qpkca"]

[node name="Database Editor" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1
script = ExtResource("1_th4b5")

[node name="Bind Tables to Monsters" type="Panel" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Filter" type="VBoxContainer" parent="Bind Tables to Monsters"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
grow_vertical = 0

[node name="txtMonsterSearch" type="LineEdit" parent="Bind Tables to Monsters/Filter"]
layout_mode = 2
placeholder_text = "Filter by name"

[node name="OptionButton" type="OptionButton" parent="Bind Tables to Monsters/Filter"]
layout_mode = 2
allow_reselect = true
script = ExtResource("2_tllp7")

[node name="Add" type="VBoxContainer" parent="Bind Tables to Monsters"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.3
grow_vertical = 0

[node name="Label2" type="Label" parent="Bind Tables to Monsters/Add"]
layout_mode = 2
text = "Search for a table to add it."

[node name="txtAddLootTableSearch" type="LineEdit" parent="Bind Tables to Monsters/Add"]
layout_mode = 2
placeholder_text = "Filter by name"

[node name="OptionButton" type="OptionButton" parent="Bind Tables to Monsters/Add"]
layout_mode = 2
allow_reselect = true

[node name="Button" type="Button" parent="Bind Tables to Monsters/Add"]
layout_mode = 2
text = "Add"

[node name="Remove" type="VBoxContainer" parent="Bind Tables to Monsters"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.3
grow_vertical = 0

[node name="Label3" type="Label" parent="Bind Tables to Monsters/Remove"]
layout_mode = 2
text = "Search for a table to remove it."

[node name="OptionButton" type="OptionButton" parent="Bind Tables to Monsters/Remove"]
layout_mode = 2
allow_reselect = true

[node name="Button" type="Button" parent="Bind Tables to Monsters/Remove"]
layout_mode = 2
text = "Remove"

[node name="Tree" type="Tree" parent="Bind Tables to Monsters"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
size_flags_vertical = 3
theme_override_constants/inner_item_margin_right = -100
theme_override_constants/v_separation = -1
theme_override_styles/focus = SubResource("StyleBoxEmpty_pmsgt")
theme_override_styles/selected = SubResource("StyleBoxEmpty_qpkca")
columns = 4
column_titles_visible = true
allow_search = false
hide_root = true
scroll_horizontal_enabled = false

[node name="Bind Items to Tables" type="Panel" parent="."]
layout_mode = 2
script = ExtResource("3_vpp0t")
metadata/_tab_index = 1

[node name="LineEdit" type="LineEdit" parent="Bind Items to Tables"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -305.5
offset_bottom = -274.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Table Name"

[node name="OptionButton" type="OptionButton" parent="Bind Items to Tables"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -267.5
offset_bottom = -247.5
grow_horizontal = 2
grow_vertical = 2
allow_reselect = true

[node name="Add_Margin" type="MarginContainer" parent="Bind Items to Tables"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.11
anchor_right = 0.49
anchor_bottom = 0.15
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Add" type="VBoxContainer" parent="Bind Items to Tables/Add_Margin"]
layout_direction = 1
layout_mode = 2

[node name="Filter" type="HBoxContainer" parent="Bind Items to Tables/Add_Margin/Add"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_item_searchbox" type="Label" parent="Bind Items to Tables/Add_Margin/Add/Filter"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item Filter"

[node name="LineEdit" type="LineEdit" parent="Bind Items to Tables/Add_Margin/Add/Filter"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter items by name"

[node name="Item Lookup" type="HBoxContainer" parent="Bind Items to Tables/Add_Margin/Add"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_item_searchbox" type="Label" parent="Bind Items to Tables/Add_Margin/Add/Item Lookup"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item Lookup"

[node name="OptionButton" type="OptionButton" parent="Bind Items to Tables/Add_Margin/Add/Item Lookup"]
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true

[node name="Probability" type="HBoxContainer" parent="Bind Items to Tables/Add_Margin/Add"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_probability" type="Label" parent="Bind Items to Tables/Add_Margin/Add/Probability"]
layout_mode = 2
size_flags_horizontal = 3
text = "Probability"

[node name="SpinBox" type="SpinBox" parent="Bind Items to Tables/Add_Margin/Add/Probability"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.14748e+09

[node name="Quantity" type="HBoxContainer" parent="Bind Items to Tables/Add_Margin/Add"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_quantity" type="Label" parent="Bind Items to Tables/Add_Margin/Add/Quantity"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quantity"

[node name="SpinBox" type="SpinBox" parent="Bind Items to Tables/Add_Margin/Add/Quantity"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.14748e+09

[node name="Button" type="Button" parent="Bind Items to Tables/Add_Margin/Add"]
layout_mode = 2
text = "Add Item"

[node name="Delete_Margin" type="MarginContainer" parent="Bind Items to Tables"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.11
anchor_right = 0.99
anchor_bottom = 0.15
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Delete" type="VBoxContainer" parent="Bind Items to Tables/Delete_Margin"]
layout_direction = 1
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Bind Items to Tables/Delete_Margin/Delete"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_item_searchbox" type="Label" parent="Bind Items to Tables/Delete_Margin/Delete/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
text = "The below item lookup with populate with items belonging to the selected table"
autowrap_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Bind Items to Tables/Delete_Margin/Delete"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_item_searchbox" type="Label" parent="Bind Items to Tables/Delete_Margin/Delete/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item Lookup"

[node name="OptionButton" type="OptionButton" parent="Bind Items to Tables/Delete_Margin/Delete/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true

[node name="Button" type="Button" parent="Bind Items to Tables/Delete_Margin/Delete"]
layout_mode = 2
text = "Remove Item"

[node name="Tree" type="Tree" parent="Bind Items to Tables"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.415
anchor_right = 1.0
anchor_bottom = 1.0
columns = 4
column_titles_visible = true
select_mode = 1
scroll_horizontal_enabled = false

[node name="Monster Builder" type="Panel" parent="."]
visible = false
layout_mode = 2
script = ExtResource("4_xvjam")
metadata/_tab_index = 2

[node name="txtMonsterName" type="LineEdit" parent="Monster Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -300.5
offset_bottom = -269.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Monster Name"

[node name="Button" type="Button" parent="Monster Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -258.5
offset_bottom = -227.5
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Add Monster"

[node name="txtMonsterSearch" type="LineEdit" parent="Monster Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -214.5
offset_bottom = -183.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Search for monster to delete"

[node name="OptionButton" type="OptionButton" parent="Monster Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -165.5
offset_bottom = -145.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button2" type="Button" parent="Monster Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -117.5
offset_bottom = -109.5
grow_horizontal = 2
grow_vertical = 2
text = "Delete Monster and its TableEntries"

[node name="Item Builder" type="Panel" parent="."]
visible = false
layout_mode = 2
script = ExtResource("5_x68gr")
metadata/_tab_index = 3

[node name="txtItemName" type="LineEdit" parent="Item Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -300.5
offset_bottom = -269.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Item Name"

[node name="Button" type="Button" parent="Item Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -258.5
offset_bottom = -227.5
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Add Item"

[node name="txtItemSearch" type="LineEdit" parent="Item Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -214.5
offset_bottom = -183.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Search for items to delete"

[node name="OptionButton" type="OptionButton" parent="Item Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -165.5
offset_bottom = -145.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button2" type="Button" parent="Item Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -117.5
offset_bottom = -109.5
grow_horizontal = 2
grow_vertical = 2
text = "Delete Item and remove it from all its ItemEntries"

[node name="Table Builder" type="Panel" parent="."]
visible = false
layout_mode = 2
script = ExtResource("6_3hbna")
metadata/_tab_index = 4

[node name="txtTableName" type="LineEdit" parent="Table Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -300.5
offset_bottom = -269.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Table Name"

[node name="Button" type="Button" parent="Table Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -258.5
offset_bottom = -227.5
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Add Table"

[node name="txtTableSearch" type="LineEdit" parent="Table Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -214.5
offset_bottom = -183.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Search for tables to delete"

[node name="OptionButton" type="OptionButton" parent="Table Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -165.5
offset_bottom = -145.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button2" type="Button" parent="Table Builder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -117.5
offset_bottom = -109.5
grow_horizontal = 2
grow_vertical = 2
text = "Delete table and remove it from TableEntries and ItemEntries"

[connection signal="text_changed" from="Bind Tables to Monsters/Filter/txtMonsterSearch" to="Bind Tables to Monsters/Filter/OptionButton" method="_on_txtMonsterSearch_text_changed"]
[connection signal="item_selected" from="Bind Tables to Monsters/Filter/OptionButton" to="Bind Tables to Monsters/Filter/OptionButton" method="_on_item_selected"]
[connection signal="text_changed" from="Bind Tables to Monsters/Add/txtAddLootTableSearch" to="Bind Tables to Monsters/Filter/OptionButton" method="_on_txtAddLootTableSearch_text_changed"]
[connection signal="button_down" from="Bind Tables to Monsters/Add/Button" to="Bind Tables to Monsters/Filter/OptionButton" method="_on_btn_down_add_table"]
[connection signal="button_down" from="Bind Tables to Monsters/Remove/Button" to="Bind Tables to Monsters/Filter/OptionButton" method="_on_btn_down_remove_table"]
[connection signal="text_changed" from="Bind Items to Tables/LineEdit" to="Bind Items to Tables" method="_on_line_edit_text_changed"]
[connection signal="item_selected" from="Bind Items to Tables/OptionButton" to="Bind Items to Tables" method="_on_option_button_item_selected"]
[connection signal="text_changed" from="Bind Items to Tables/Add_Margin/Add/Filter/LineEdit" to="Bind Items to Tables" method="_on_item_add_filter_text_changed"]
[connection signal="pressed" from="Bind Items to Tables/Add_Margin/Add/Button" to="Bind Items to Tables" method="_on_btn_pressed_add_item_to_table"]
[connection signal="text_changed" from="Monster Builder/txtMonsterName" to="Monster Builder" method="_on_txt_monster_name_text_changed"]
[connection signal="pressed" from="Monster Builder/Button" to="Monster Builder" method="_on_button_pressed"]
[connection signal="text_changed" from="Monster Builder/txtMonsterSearch" to="Monster Builder" method="_on_txt_monster_search_text_changed"]
[connection signal="pressed" from="Monster Builder/Button2" to="Monster Builder" method="_on_button_2_pressed"]
[connection signal="text_changed" from="Item Builder/txtItemName" to="Item Builder" method="_on_txt_item_name_text_changed"]
[connection signal="pressed" from="Item Builder/Button" to="Item Builder" method="_on_button_pressed"]
[connection signal="text_changed" from="Item Builder/txtItemSearch" to="Item Builder" method="_on_txt_item_search_text_changed"]
[connection signal="pressed" from="Item Builder/Button2" to="Item Builder" method="_on_button_2_pressed"]
[connection signal="text_changed" from="Table Builder/txtTableName" to="Table Builder" method="_on_txt_table_name_text_changed"]
[connection signal="pressed" from="Table Builder/Button" to="Table Builder" method="_on_button_pressed"]
[connection signal="text_changed" from="Table Builder/txtTableSearch" to="Table Builder" method="_on_txt_table_search_text_changed"]
[connection signal="pressed" from="Table Builder/Button2" to="Table Builder" method="_on_button_2_pressed"]
